# ocr_translate

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile-cpu  Dockerfile-gpu  README.md  README_release.md  build.ps1  build.sh  build2.ps1  build2.sh  environment_variables.json  genindex.html  http-routingtable.html  index.html  manage.py  nginx.default  objects.inv  openapi.yml  plugins.txt  pyproject.toml  requirements-torch-cpu.txt  requirements-torch-cuda.txt  requirements-torch.txt  requirements.txt  run-user.bat  run-user.sh  run_server.py  search.html  searchindex.js  start-server.sh  todo
.github/workflows/: cd-docs.yml  cd-pypi.yml  cd.yml  ci-docs.yml  ci-python.yml  ci.yml  docs-build.yml  docs-deploy.yml
_sources/contrib/: api.rst.txt  plugins.rst.txt
_sources/install/: index.rst.txt
_sources/install_run/: from_docker.rst.txt  from_github.rst.txt  index.rst.txt
_sources/running/: from_docker.rst.txt  from_github.rst.txt  from_release.rst.txt
_sources/user/: _env_vars.rst.txt  envs.rst.txt  index.rst.txt
_static/css/: custom.css
base/: admin.py  apps.py  messaging.py  models.py  queues.py  urls.py  views.py
base/OCR_TSL/: __init__.py  base.py  box.py  lang.py  languages.json  models.json  ocr.py  tesseract.py  tsl.py
base/migrations/: 0001_initial.py  0002_alter_ocrrun_result.py  0002_ocrboxmodel_languages_ocrboxrun_lang_src_and_more.py  0003_alter_translationrun_result.py  0003_language_easyocr.py  0004_alter_text_lang.py  0004_language_tesseract_ocrboxmodel_language_format_and_more.py  0005_language_remove_tslmodel_dst_language_and_more.py  0005_optiondict.py  0006_remove_ocrboxrun_options_remove_ocrrun_options_and_more.py  0006_remove_translationrun_dst_lang_and_more.py  0007_alter_translationrun_result.py  0007_ocrboxrun_options_ocrrun_options_and_more.py  0008_alter_ocrrun_result.py  0008_language_facebookm2m.py  0009_alter_ocrboxrun_model_alter_ocrrun_model_and_more.py  0009_alter_text_lang.py  0010_alter_text_text.py  0010_language_break_chars_language_ignore_chars.py  0011_batchtranslationrun_translationrun_from_batch.py  0011_remove_text_lang_translationrun_lang_dst_and_more.py  0012_batchtranslationrun_lang_dst_and_more.py  0012_ocrrun_lang_src.py  0013_alter_language_easyocr_alter_language_facebookm2m_and_more.py  0013_rename_name_language_iso1.py  0014_language_iso2b_language_iso2t_language_iso3_and_more.py  0014_remove_translationrun_from_batch_and_more.py  0015_alter_language_iso1_alter_language_iso2b_and_more.py  0016_alter_language_iso3.py  0017_alter_language_name.py
contrib/: api.html  index.html  plugins.html
docs/: environment_variables.json  variables_to_rst.py
docs/scripts/: variables_to_rst.py
docs/source/: conf.py  index.rst
install/: index.html
install_run/: from_docker.html  from_github.html  from_pypi.html  from_release.html  index.html
mysite/: asgi.py  plugin_manager.py  settings.py  urls.py  wsgi.py
ocr_translate/: __init__.py  admin.py  apps.py  asgi.py  entrypoint_manager.py  messaging.py  models.py  plugin_manager.py  plugins_data.json  queues.py  request_decorators.py  settings.py  tests.py  trie.py  tries.py  urls.py  views.py  wsgi.py
ocr_translate/OCR_TSL/: __init__.py  base.py  box.py  lang.py  ocr.py  tesseract.py  tsl.py
ocr_translate/app/: __init__.py  settings.py  urls.py  wsgi.py
ocr_translate/dictionaries/: en.txt  en_freq.json  test.txt  test_freq.json
ocr_translate/migrations/: 0001_initial.py  0002_ocrboxmodel_default_options_ocrmodel_default_options_and_more_squashed_0005_alter_ocrboxmodel_default_options_and_more.py  0006_tslmodel_entrypoint.py  0007_ocrmodel_entrypoint_alter_ocrmodel_default_options_and_more.py  0008_ocrboxmodel_entrypoint_and_more.py  0009_remove_language_easyocr_remove_language_facebookm2m_and_more.py  0010_rename_from_ocr_bbox_from_ocr_merged.py  0010_rename_from_ocr_bbox_from_ocr_merged_squashed_0016_alter_ocrrun_result_merged.py  0011_bbox_from_ocr_single_alter_bbox_from_ocr_merged.py  0012_ocrmodel_ocr_mode.py  0013_rename_result_ocrrun_result_merged.py  0014_ocrrun_result_single_alter_ocrrun_result_merged.py  0015_bbox_to_merged.py  0016_alter_ocrrun_result_merged.py  0017_alter_ocrboxmodel_iso1_map_alter_ocrmodel_iso1_map_and_more.py  0018_ocrmodel_processor_name_ocrmodel_tokenizer_name.py  0019_ocrboxmodel_active_ocrmodel_active_tslmodel_active.py  0020_loadevent_language_load_events_dst_and_more.py
ocr_translate/models/: __init__.py  base.py  box.py  ocr.py  tsl.py
ocr_translate/ocr_tsl/: __init__.py  box.py  cached_lists.py  full.py  huggingface.py  initializers.py  lang.py  languages.json  models.json  ocr.py  signals.py  tesseract.py  tsl.py
ocr_translate/plugins/: __init__.py  easyocr.py  hugginface.py  tesseract.py
ocr_translate/scripts/: run.py
plugins/: index.html
release_files/: README_release.md  run-user.bat  run-user.sh  run.bat  run.sh  run_server.py
running/: from_docker.html  from_github.html  from_pypi.html  from_release.html  index.html
tests/: conftest.py  test_base.py  test_entrypoint_manager.py  test_init.py  test_models.py  test_plugin_manager.py  test_request_decorators.py  test_run.py  test_trie.py  test_validate_json.py  test_views.py
tests/messaging/: conftest.py  test_message.py  test_queue.py  test_simple.py  test_wmq.py  test_worker.py
tests/ocr_tsl/: conftest.py  test_box.py  test_cached_lists.py  test_full.py  test_huggingface.py  test_lang.py  test_ocr.py  test_oct_init.py  test_tesseract.py  test_tsl.py
tests/plugin/: _test_huggingface._py  _test_tesseract._py  conftest.py  test_base.py  test_easyocr.py  test_huggingface.py  test_tesseract.py
tests/test_models/: test_tsl_pre_tokenize_breakchar_.yml  test_tsl_pre_tokenize_breakchar_newline_.yml  test_tsl_pre_tokenize_dash_newline_.yml  test_tsl_pre_tokenize_newline_.yml  test_tsl_pre_tokenize_newlines_.yml  test_tsl_pre_tokenize_simple_.yml
tests/views/: test_get_default_options.py  test_get_plugin_data.py  test_get_translations.py  test_handshake.py  test_run_ocrtsl.py  (+6 more)
user/: _env_vars.html  envs.html  index.html
(+21 files in other folders)
