[build-system]
# build the package with [flit](https://flit.readthedocs.io)
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
# See https://www.python.org/dev/peps/pep-0621/
name = "django-ocr_translate"
dynamic = ["version"] # read from ocr_translate/__init__.py
description = "Django app for OCR and translation"
authors = [
    { name = "Davide Grassano" },
]
readme = "README.md"
license = { file = "LICENSE.txt" }
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: Django",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Natural Language :: English",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Text Processing :: Linguistic",
    "Intended Audience :: End Users/Desktop",
]
keywords = ["django", "ocr", "translation"]
requires-python = ">=3.10"
dependencies = [
    "pyyaml",
    "rich",
    "wheel~=0.45.1",
    "setuptools~=70.2.0",
    "numpy~=2.2.6",
    "Django~=5.2.4",
    "django-cors-headers~=4.7.0",
    "Pillow~=11.0.0",
    "opencv-python-headless~=4.12.0.88"
]

[project.urls]
Source = "https://github.com/crivella/ocr_translate"

[project.optional-dependencies]
mysql = [
    "pymysql",
]
postgres = [
    "psycopg[binary]",
]
docs = [
    "docutils~=0.21.2",
    "sphinx~=8.2.3",
    "sphinx_design~=0.6.1",
    "sphinx-rtd-theme~=3.0.2",
    "sphinx-rtd-dark-mode~=1.3.0",
    "sphinxcontrib-openapi~=0.8.4",
]
tests = [
    "pytest~=8.2.0",
    "pytest-cov~=6.2.1",
    "pytest-django~=4.11.1",
    "pytest-regressions~=2.8.1",
]
pre-commit = [
    "pre-commit~=4.2.0",
    "pylint~=3.3.7",
    "pylint-pytest~=1.1.8",
    "pylint-django~=2.6.1",
]
release = [
    "flit"
]

[tool.flit.module]
name = "ocr_translate"

[tool.flit.sdist]
exclude = [
    ".gitignore", ".github", ".pre-commit-config.yaml",
    "icon.ico", "run_server.py", "run.bat",
    "Dockerfile", "nginx.default", "start-server.sh",
    "mysite/", "mysite/*", "manage.py", "tests/", "tests/*",
    "docs/", "docs/*"
    ]

[tool.pytest.ini_options]
testpaths = ["tests"]
DJANGO_SETTINGS_MODULE = "ocr_translate.app.settings"

[tool.pylint.main]
load-plugins = [
    "pylint_django",
    "pylint_pytest"
]
django-settings-module = "ocr_translate.app.settings"

[tool.pylint.messages_control]
disable = [
    "logging-fstring-interpolation",
    "global-statement",
    "broad-exception-caught",
    "too-few-public-methods",
]


[tool.pylint.format]
max-line-length = 120
good-names = [
    "_",
    "l", "r", "b", "t",
    "l1", "r1", "b1", "t1",
    "l2", "r2", "b2", "t2",
    "i", "j",
    "k", "v",
    "f",
]

[tool.pylint.design]
max-args = 10
max-locals = 30
max-attributes = 12
max-positional-arguments = 10

[tool.tox]
requires = ["tox>=4"]
env_list = ["3.10", "3.11", "3.12", "3.13"]

[tool.tox.env_run_base]
description = "Run test under {base_python}"
commands = [["pytest", "tests"]]
deps = [".[tests]"]
